Thu Apr  2 19:33:13 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Added -lXp to PLATFORM_X11_LIBS.

Thu Apr  2 10:05:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sig_Handlers_Test.cpp:
          Fixed compile error and warning

Wed Apr  1 19:48:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Log_Msg_Test.cpp:
          Fix for vxworks 6.7

        * tests/Recursive_Condition_Test.cpp:
          Const change and added a debug statement

        * tests/Sig_Handlers_Test.cpp:
          Removed not needed include and fixed compile issue

        * tests/tests.mpc:
          Added missing Sig_Handlers_Test

Wed Apr  1 15:12:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Repository.h:
          Removed unicode character. Thanks to Alon Diamant
          <diamant dot alon at gmail dot com> for reporting this

Tue Mar 31 07:18:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sock_Connect.cpp:
          VxWorks 6.7 also has an issue with in6_addr

Tue Mar 31 14:59:49 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * ace/High_Res_Timer.cpp:

          Linux configured with "clock=pit" on the boot line (commonly used
          for virtual machines) can report a 0 MHz CPU, in which case ACE
          must run calibration for the High Res Timer to avoid a division by 0.

Mon Mar 30 14:32:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.cpp:
        * ace/OS_NS_Thread.inl:
          Refactored VxWorks version checks to new macros

Fri Mar 27 13:24:58 UTC 2009  Olli Savia  <ops@iki.fi>

        * bin/MakeProjectCreator/config/ace_athena3d.mpb:
        * tests/XtAthenaReactor_Test.cpp:
        * tests/tests.mpc:
          Added support for Athena-3D widgets.

Fri Mar 27 11:19:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm: