@@ -32,7 +32,7 @@
 #if (defined (ACE_WIN32) && !defined (ACE_HAS_WINCE)) || defined (ACE_HAS_VXTHREADS)
 // If platforms support semaphores with timed wait, then we use semaphores instead of c.v.
 # define ACE_TOKEN_USES_SEMAPHORE
-#endif /* (ACE_WIN32 && !ACE_HAS_WINCE) || VXWORKS */
+#endif /* (ACE_WIN32 && !ACE_HAS_WINCE) || ACE_HAS_VXTHREADS */
 
 #if defined (ACE_TOKEN_USES_SEMAPHORE)
 #  include "ace/Semaphore.h"
